test/message/esm_loader_not_found_cjs_hint_relative.out
(node:*) ExperimentalWarning: --experimental-loader is an experimental feature. This feature could change at any time
(Use `node --trace-warnings ...` to show where the warning was created)
internal/process/execution.js:*
  internalBinding('errors').triggerUncaughtException(error, fromPromise);
                            ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find module '*test*common*fixtures' imported from *
Did you mean to import ./test/common/fixtures.js?
    at new NodeError (internal/errors.js:*:*)
    at finalizeResolution (internal/modules/esm/resolve.js:*:*)
    at moduleResolve (internal/modules/esm/resolve.js:*:*)
    at defaultResolve (internal/modules/esm/resolve.js:*:*)
    at Loader.importLoader (internal/modules/esm/loader.js:*:*)
    at createLoader (internal/process/esm_loader.js:*:*)
    at exports.getLoader (internal/process/esm_loader.js:*:*)
    at runMainESM (internal/modules/run_main.js:*:*)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:*:*)
    at internal/main/run_main_module.js:*:* {
  code: 'ERR_MODULE_NOT_FOUND'
}
